--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   }
   
   h1 {
+    font-family: Georgia;
     color: #FFF;
     font-size: 2em;
     padding-top: 100px;
@@ -17,6 +18,7 @@ body {
   }
   
   h2 {
+    font-family: Georgia;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     color: rgba(255, 255, 255, 0.5);
     font-weight: 100;
