added font size of 18px to p

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   
   p {
     font-family: Helvetica;
+    font-size: 18px;
     color: aliceblue;
     line-height: 1.3em;
     text-align: left;
