--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
   p {
     font-family: Helvetica;
     font-size: 18px;
+    font-weight: bold;
     color: aliceblue;
     line-height: 1.3em;
     text-align: left;
